# refuse

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
benches/: timings.rs  vs-arc.rs
benchmarks/: Cargo.toml
benchmarks/benches/: timings.rs  vs-arc.rs
examples/: allocate_a_lot.rs  basic.rs  map_as.rs  trace.rs
main/: crates.js  help.html  search-index.js  settings.html  src-files.js
main/benchmarks/: all.html  index.html
main/musegc/: all.html  fn.collect.html  fn.collected.html  index.html  sidebar-items.js  struct.AnyRef.html  struct.CollectionGuard.html  struct.CollectionStarting.html  struct.Ref.html  struct.Root.html  struct.Tracer.html  trait.Collectable.html  trait.ContainsNoCollectables.html  trait.ContainsNoRefs.html  trait.MapAs.html  trait.NoMapping.html  trait.SimpleType.html  trait.Trace.html
main/refuse/: all.html  attr.collected.html  derive.MapAs.html  derive.Trace.html  fn.collect.html  fn.collected.html  fn.try_collect.html  index.html  sidebar-items.js  struct.AnyRef.html  struct.AnyRoot.html  struct.CollectionGuard.html  struct.CollectionStarting.html  struct.LocalPool.html  struct.Ref.html  struct.Root.html  struct.Tracer.html  struct.WouldDeadlock.html  struct.YieldComplete.html  struct.Yielder.html  trait.Collectable.html  trait.ContainsNoRefs.html  trait.MapAs.html  trait.NoMapping.html  trait.SimpleType.html  trait.Trace.html
main/refuse/architecture/: index.html
main/refuse_macros/: all.html  derive.MapAs.html  derive.Trace.html  index.html  sidebar-items.js
main/refuse_pool/: all.html  index.html  sidebar-items.js  struct.RefString.html  struct.RootString.html
main/search.desc/benchmarks/: benchmarks-desc-0-.js
main/search.desc/refuse/: refuse-desc-0-.js
main/search.desc/refuse_macros/: refuse_macros-desc-0-.js
main/search.desc/refuse_pool/: refuse_pool-desc-0-.js
main/src/benchmarks/: lib.rs.html
main/src/musegc/: lib.rs.html
main/src/refuse/: lib.rs.html
main/src/refuse_macros/: lib.rs.html
main/src/refuse_pool/: lib.rs.html
main/trait.impl/core/clone/: trait.Clone.js
main/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/trait.impl/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
main/trait.impl/core/default/: trait.Default.js
main/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
main/trait.impl/core/hash/: trait.Hash.js
main/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/trait.impl/core/ops/deref/: trait.Deref.js
main/trait.impl/core/ops/drop/: trait.Drop.js
main/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/trait.impl/musegc/: trait.ContainsNoRefs.js
main/trait.impl/refuse/: trait.MapAs.js  trait.Trace.js
refuse-macros/: Cargo.toml
refuse-macros/src/: lib.rs
refuse-pool/: Cargo.toml
refuse-pool/src/: lib.rs
src/: lib.rs  tests.rs
tests/: basic.rs  multithreaded.rs  ref.rs  root-clone.rs  root.rs
