

[package]
name = "refuse"
description = "An easy-to-use, incremental, multi-threaded garbage collector"
version = "0.0.3"
edition = "2021"
rust-version = "1.73.0"
repository = "https://github.com/khonsulabs/refuse"
license = "MIT OR Apache-2.0"
categories = ["memory-management"]
keywords = ["gc", "garbage", "collector"]

[dependencies]
crossbeam-utils = "0.8.19"
flume = "0.11.0"
intentional = "0.1.1"
kempt = "0.2.4"
parking_lot = { version = "0.12.1" }
refuse-macros = { path = "./refuse-macros", version = "=0.0.3" }

[lints]
rust.missing_docs = "warn"


[profile.release]
debug = true
lto = true

[profile.bench]
lto = true

[workspace]
members = ["benchmarks", "refuse-macros", "refuse-pool"]

[workspace.lints]
clippy.pedantic = "warn"
