[package]
name = "refuse-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refuse = { path = "../" }
ahash = { version = "0.8.11", default-features = false, features = [
    "runtime-rng",
] }
hashbrown = "0.14.3"

[lints]
rust.missing_docs = "warn"
