[package]
name = "refuse-pool"
version = "0.0.4"
description = "A string interner utilizing the Refuse garbage collector"
edition = "2021"
rust-version = "1.73.0"
repository = "https://github.com/khonsulabs/refuse"
license = "MIT OR Apache-2.0"
categories = ["memory-management"]
keywords = ["symbols", "string-interner", "interner"]

[dependencies]
refuse = { path = "../", version = "=0.0.4" }
ahash = { version = "0.8.11", default-features = false, features = [
    "runtime-rng",
] }
hashbrown = "0.14.3"

[lints]
rust.missing_docs = "warn"
